# testing_de

./: .env.dev  docker-compose.yml  pyproject.toml  requirements.txt  test_1.py
src/: main.py  settings.py
src/API/: api.py
src/Database/: data.py
src/Extracting/: __init__.py  connect_api.py  extract.py  parsing.py
src/Loading/: __init__.py  add_data.py  connection.py  crud_data.py  database_creation.py
src/Validation/: __init__.py  test_1.py  valid.py
test/: test_1.py
